Fix roles dark mode background

--- a/src/components/roles/Roles.css
+++ b/src/components/roles/Roles.css
@@ -1,16 +1,14 @@
-.container--roles,
-.container--roles--dark {
+#roles {
   transition: all 300ms ease;
 }
 
-.container--roles {
-  background-color: #fff;
-  color: #222c2a;
-}
-
-.container--roles--dark {
+.roles--dark {
   background-color: #161616;
   color: #d8d8d8;
+}
+
+.container--roles {
+  color: #222c2a;
 }
 
 .section {
